# Franka-Panda

franka_panda/: CMakeLists.txt  package.xml
franka_panda/description/: panda.urdf
franka_panda/launch/: panda_description.launch.py
franka_panda/rviz_config/: default.rviz
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: gazebo_controllers.yaml  initial_positions.yaml  moveit_controllers.yaml  panda.gazebo.xacro  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
panda_moveit_config/launch/: moveit_rviz.launch.py  panda_gazebo.launch.py
