<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_moveit_config</name>
  <version>0.3.0</version>
  <description>
     Configuration and launch files for Franka Panda manipulation profiling in ROS 2 Humble.
  </description>
  <maintainer email="briankiprono0022@gmail.com">Brian Kiprono</maintainer>

  <license>BSD</license>

  <author email="briankiprono0022@gmail.com">Brian Kiprono</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt 2 Core -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  
  <!-- ROS 2 Control & Gazebo (Essential for your simulation) -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- Robot & State Information -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>franka_panda</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>